--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>org.graylog.repackaged</groupId>
   <artifactId>os-platform-finder</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
+  <version>1.1.0-SNAPSHOT</version>
 
   <name>${project.artifactId}</name>
   <description>Utility Java class to discover the current OS Platform</description>
