Set tag name format to @{project.version} for Maven release plugin

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
     <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+    <tagNameFormat>@{project.version}</tagNameFormat>
   </properties>
 
   <dependencies>
