--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <prerequisites>
     <maven>3.0.1</maven>
@@ -10,7 +8,7 @@
   <groupId>org.graylog.repackaged</groupId>
   <artifactId>os-platform-finder</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
 
   <name>${project.artifactId}</name>
   <description>Utility Java class to discover the current OS Platform</description>
@@ -46,7 +44,7 @@
     <url>https://github.com/Graylog2/os-platform-finder</url>
     <connection>scm:git:git@github.com:Graylog2/os-platform-finder.git</connection>
     <developerConnection>scm:git:git@github.com:Graylog2/os-platform-finder.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>1.1.0</tag>
   </scm>
 
   <properties>
