--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.graylog.repackaged</groupId>
   <artifactId>os-platform-finder</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.2.1</version>
 
   <name>${project.artifactId}</name>
   <description>Utility Java class to discover the current OS Platform</description>
@@ -44,7 +44,7 @@
     <url>https://github.com/Graylog2/os-platform-finder</url>
     <connection>scm:git:git@github.com:Graylog2/os-platform-finder.git</connection>
     <developerConnection>scm:git:git@github.com:Graylog2/os-platform-finder.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>1.2.1</tag>
   </scm>
 
   <properties>
